codepkg/objects/Fabric_Component__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hanger</fullName>
                </value>
                <value>
                    <fullName>Sticker</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Lang_1__c</fullName>
        <label>Component Lang-1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Lang_2__c</fullName>
        <label>Component Lang-2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Lang_3__c</fullName>
        <label>Component Lang-3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Component_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fabric_Component_c__c</fullName>
        <label>Component Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                </value>
                <value>
                    <fullName>BOTTOM</fullName>
                </value>
                <value>
                    <fullName>BODY/CORP</fullName>
                </value>
                <value>
                    <fullName>SHELL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Fabric Components</relationshipLabel>
        <relationshipName>Fabric_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Lang_1__c</fullName>
        <label>Material Lang-1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Lang_2__c</fullName>
        <label>Material Lang-2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Lang_3__c</fullName>
        <label>Material Lang-3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Name__c</fullName>
        <label>Material Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COTTON</fullName>
                </value>
                <value>
                    <fullName>POLYESTER</fullName>
                </value>
                <value>
                    <fullName>NYLON</fullName>
                </value>
                <value>
                    <fullName>VISCOSE</fullName>
                </value>
                <value>
                    <fullName>ACRYLIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Material_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Fabric Components</relationshipLabel>
        <relationshipName>Fabric_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Fabric Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Component_Lang_1__c</columns>
        <columns>Component_Lang_2__c</columns>
        <columns>Component_Lang_3__c</columns>
        <columns>Component_Lang_4__c</columns>
        <columns>Component_Lang_5__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Lang_1__c</columns>
        <columns>Material_Lang_2__c</columns>
        <columns>Material_Lang_3__c</columns>
        <columns>Material_Lang_4__c</columns>
        <columns>Material_Lang_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CareLabelRetailer</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Component_Lang_1__c</columns>
        <columns>Component_Lang_2__c</columns>
        <columns>Component_Lang_3__c</columns>
        <columns>Component_Lang_4__c</columns>
        <columns>Component_Lang_5__c</columns>
        <columns>Material__c</columns>
        <columns>Material_Lang_1__c</columns>
        <columns>Material_Lang_2__c</columns>
        <columns>Material_Lang_3__c</columns>
        <columns>Material_Lang_4__c</columns>
        <columns>Material_Lang_5__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>equals</operation>
            <value>CareLabelRetailer</value>
        </filters>
        <label>_CareLabelRetailer</label>
    </listViews>
    <nameField>
        <displayFormat>FAB {00000000}</displayFormat>
        <label>Fabric Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fabric Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>